--- a/driver.htm
+++ b/driver.htm
@@ -109,6 +109,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_objasm_file_direct.htm">
     Choose DO_DIRECT_IO for File IRP</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_objasm_file_neither.htm">
+    Choose DO_NEITHER_IO for File IRP</a><br>
+
 &oplus;
 <b>使用範例 - Assembly (MASM32)</b><br>
 
