--- a/driver/wdm_objasm_ioctl_buffer.htm
+++ b/driver/wdm_objasm_ioctl_buffer.htm
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 使用範例 - Assembly (ObjAsm) - <b>Choose DO_NEITHER_IO for File IRP</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 使用範例 - Assembly (ObjAsm) - <b>Choose METHOD_BUFFERED for IOCTL IRP</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -19,6 +19,9 @@ SysSetup OOP, DDK32, ANSI_STRING
 
 MakeObjects Primer, KDriver, KPnpDevice, KPnpLowerDevice
 
+IOCTL_GET equ CTL_CODE(FILE_DEVICE_UNKNOWN, 800h, METHOD_BUFFERED, FILE_ANY_ACCESS)
+IOCTL_SET equ CTL_CODE(FILE_DEVICE_UNKNOWN, 801h, METHOD_BUFFERED, FILE_ANY_ACCESS)
+
 Object MyDriver, , KDriver
     RedefineMethod Unload
     RedefineMethod AddDevice, PDEVICE_OBJECT
@@ -27,10 +30,9 @@ Object MyDriver, , KDriver
 ObjectEnd
 
 Object MyDevice, , KPnpDevice
-    RedefineMethod Create, PKIrp
-    RedefineMethod Read, PKIrp
-    RedefineMethod Write, PKIrp
     RedefineMethod Close, PKIrp
+    RedefineMethod Create, PKIrp
+    RedefineMethod DeviceControl, PKIrp
 
     RedefineMethod Init, PDEVICE_OBJECT
     RedefineMethod DefaultPnp, PKIrp
@@ -67,7 +69,7 @@ Method MyDriver.Unload, uses esi
 MethodEnd
 
 Method MyDevice.Init, uses esi, pPhyDevice : PDEVICE_OBJECT
-    ACall Init, $OfsCStrW("\Device\MyDriver"), FILE_DEVICE_UNKNOWN, $OfsCStrW("\DosDevices\MyDriver"), 0, 0
+    ACall Init, $OfsCStrW("\Device\MyDriver"), FILE_DEVICE_UNKNOWN, $OfsCStrW("\DosDevices\MyDriver"), 0, DO_BUFFERED_IO
 
     SetObject esi
     OCall [esi].m_pMyLowerDevice::KPnpLowerDevice.Initialize, [esi].m_pMyDevice, pPhyDevice
@@ -87,61 +89,46 @@ MethodEnd
 Method MyDevice.Create, uses esi, I : PKIrp
     T $OfsCStr("IRP_MJ_CREATE")
 
-    OCall I::KIrp.Information
-    mov dword ptr [eax], 0
     OCall I::KIrp.PnpComplete, STATUS_SUCCESS, IO_NO_INCREMENT
 MethodEnd
 
-Method MyDevice.Read, uses esi, I : PKIrp
+Method MyDevice.DeviceControl, uses esi, I : PKIrp
+    local code : DWORD
     local dwSize : DWORD
     local pBuffer : POINTER
 
-    T $OfsCStr("IRP_MJ_READ")
+    and dwSize, 0
 
-    SetObject esi
-    OCall I::KIrp.UserBuffer
+    OCall I::KIrp.IoctlBuffer
     mov pBuffer, eax
 
-    invoke strcpy, pBuffer, addr [esi].m_Buffer
-    invoke strlen, pBuffer
-    mov dwSize, eax
+    OCall I::KIrp.IoctlCode
+    mov code, eax
+    .if code == IOCTL_SET
+        SetObject esi
+        invoke strcpy, addr [esi].m_Buffer, pBuffer
+        OCall I::KIrp.IoctlInputBufferSize
+        push dword ptr [eax]
+        pop dwSize
+
+        T $OfsCStr("Buffer: %s, Length: %d"), pBuffer, dwSize
+    .elseif code == IOCTL_GET
+        SetObject esi
+        invoke strcpy, pBuffer, addr [esi].m_Buffer
+        invoke strlen, pBuffer
+        mov dwSize, eax
+    .endif
 
     OCall I::KIrp.Information
     push dwSize
     pop dword ptr [eax]
 
-    OCall I::KIrp.PnpComplete, STATUS_SUCCESS, IO_NO_INCREMENT
-MethodEnd
-
-Method MyDevice.Write, uses esi, I : PKIrp
-    local dwSize : DWORD
-    local pBuffer : POINTER
-
-    T $OfsCStr("IRP_MJ_WRITE")
-
-    SetObject esi
-    OCall I::KIrp.UserBuffer
-    mov pBuffer, eax
-
-    OCall I::KIrp.WriteSize
-    push dword ptr [eax]
-    pop dwSize
-
-    invoke strcpy, addr [esi].m_Buffer, pBuffer
-
-    OCall I::KIrp.Information
-    push dwSize
-    pop dword ptr [eax]
-
-    T $OfsCStr("Address: 0x%x, Length: %d"), pBuffer, dwSize
     OCall I::KIrp.PnpComplete, STATUS_SUCCESS, IO_NO_INCREMENT
 MethodEnd
 
 Method MyDevice.Close, uses esi, I : PKIrp
     T $OfsCStr("IRP_MJ_CLOSE")
 
-    OCall I::KIrp.Information
-    mov dword ptr [eax], 0
     OCall I::KIrp.PnpComplete, STATUS_SUCCESS, IO_NO_INCREMENT
 MethodEnd
 end
@@ -149,8 +136,8 @@ end
 
 <p>
 完成<br>
-<img src="wdm_asm_file_buffer/1.jpg" class="maxSize"><br>
-<img src="wdm_asm_file_neither/1.jpg" class="maxSize">
+<img src="wdm_asm_ioctl_buffer/1.jpg" class="maxSize"><br>
+<img src="wdm_asm_ioctl_buffer/2.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
