--- a/driver.htm
+++ b/driver.htm
@@ -117,6 +117,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_objasm_ioctl.htm">
     Handle IOCTL IRP</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_objasm_ioctl_buffer.htm">
+    Choose METHOD_BUFFERED for IOCTL IRP</a><br>
+
 &oplus;
 <b>使用範例 - Assembly (MASM32)</b><br>
 
