DM250 How to backup nand flash.

--- a/system/debian_qemu_win98.htm
+++ b/system/debian_qemu_win98.htm
@@ -12,9 +12,9 @@ https://www.lysator.liu.se/~jonass/qemu_win98.html<br><br>
 步驟如下：
 </p>
 <pre>
-$ qemu-img create -f qcow2 win98.img 1G
+$ qemu-img create -f qcow2 win98.qcow2 1G
 $ qemu-img create -f qcow2 data.qcow2 1G
-$ qemu-system-i386 -hda win98.img -cdrom win98se.iso -boot c -cpu coreduo -m 512 -vga cirrus -net nic,model=pcnet -rtc base=localtime -accel tcg -no-hpet -device AC97 -drive file=data.qcow2 -serial none -parallel none
+$ qemu-system-i386 -hda win98.qcow2 -cdrom win98se.iso -boot c -cpu coreduo -m 512 -vga cirrus -net nic,model=pcnet -rtc base=localtime -accel tcg -no-hpet -device AC97 -drive file=data.qcow2 -serial none -parallel none
 </pre>
 <p>
 P.S. 安裝完成後再掛載data.qcow2<br><br>
@@ -23,7 +23,7 @@ P.S. 安裝完成後再掛載data.qcow2<br><br>
 </p>
 <pre>
 $ sudo modprobe nbd max_part=8
-$ sudo qemu-nbd --connect=/dev/nbd0 ./data.qcow2 
+$ sudo qemu-nbd --connect=/dev/nbd0 data.qcow2 
 $ sudo fdisk /dev/nbd0 -l
 $ sudo mount /dev/nbd0p1 /mnt
 </pre><br>
