--- a/umpc.htm
+++ b/umpc.htm
@@ -19,6 +19,7 @@
 
 <div id="page"><br><br>
 <p>
+    <a href="#dm250">           <img src="img/photos/dm250.jpg"         class="t0" title="King Jim Pomera DM250"/></a>
     <a href="#d5">              <img src="img/photos/d5.jpg"            class="t0" title="iriver Dicple D5"/></a>
     <a href="#d7">              <img src="img/photos/d7.jpg"            class="t0" title="iriver Dicple D7"/></a>
     <a href="#d8">              <img src="img/photos/d8.jpg"            class="t0" title="iriver Dicple D8"/></a>
@@ -130,6 +131,16 @@
 
 <div id="page"><br><br>
 <p>
+<div id="dm250"></div>
+<h3><img src="img/photos/dm250.jpg" class="floatLeft"/>
+King Jim Pomera DM250</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="umpc/dm250_backup.htm">
+如何備份NAND Flash</a><br>
+<br><br><br><br>
+
 <div id="d5"></div>
 <h3><img src="img/photos/d5.jpg" class="floatLeft"/>
 iriver Dicple D5</h3>
