--- a/umpc.htm
+++ b/umpc.htm
@@ -137,6 +137,10 @@ King Jim Pomera DM250</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
+<a href="umpc/dm250_spec.htm">
+簡要規格</a><br>
+
+&dash;
 <a href="umpc/dm250_backup.htm">
 如何備份NAND Flash</a><br>
 <br><br><br><br>
