--- a/umpc/dm250_spec.htm
+++ b/umpc/dm250_spec.htm
@@ -7,7 +7,7 @@
 <table>
   <tr><th>CHIP</th><td>Rockchip RK3128</td></tr>
   <tr><th>CPU</th><td>ARM Cortex-A7 1.2GHz (x4)</td></tr>
-  <tr><th>MEMORY</th><td>512MB RAM<br>2GB Flash</td></tr>
+  <tr><th>MEMORY</th><td>1GB RAM<br>2GB Flash</td></tr>
   <tr><th>DISPLAY</th><td>7.0" 1024x600</td></tr>
   <tr><th>INPUT</th><td>QWERTY</td></tr>
   <tr><th>SLOT</th><td>SD</td></tr>
