DM250 How to make initramfs.

--- a/umpc.htm
+++ b/umpc.htm
@@ -147,6 +147,10 @@ King Jim Pomera DM250</h3>
 &dash;
 <a href="umpc/dm250_backup.htm">
 如何備份NAND Flash</a><br>
+
+&dash;
+<a href="umpc/dm250_initramfs.htm">
+Make Initramfs</a><br>
 <br><br><br><br>
 
 <div id="d5"></div>
