--- a/umpc.htm
+++ b/umpc.htm
@@ -149,8 +149,12 @@ King Jim Pomera DM250</h3>
 如何備份NAND Flash</a><br>
 
 &dash;
+<a href="umpc/dm250_rootfs.htm">
+Make Rootfs</a><br>
+
+&dash;
 <a href="umpc/dm250_initramfs.htm">
-Make Initramfs</a><br>
+Make Initramfs</a>
 <br><br><br><br>
 
 <div id="d5"></div>
