DM250 How to install debian.

--- a/umpc.htm
+++ b/umpc.htm
@@ -145,6 +145,10 @@ King Jim Pomera DM250</h3>
 如何安裝Kernel</a><br>
 
 &dash;
+<a href="umpc/dm250_debian_setup.htm">
+如何安裝Debian 11</a><br>
+
+&dash;
 <a href="umpc/dm250_backup.htm">
 如何備份NAND Flash</a><br>
 
