DM250 How to build kernel.

--- a/umpc.htm
+++ b/umpc.htm
@@ -158,7 +158,11 @@ Make Rootfs</a><br>
 
 &dash;
 <a href="umpc/dm250_initramfs.htm">
-Make Initramfs</a>
+Make Initramfs</a><br>
+
+&dash;
+<a href="umpc/dm250_build_kernel.htm">
+Build Kernel</a><br>
 <br><br><br><br>
 
 <div id="d5"></div>
