DM250 Added teardown images.

--- a/umpc.htm
+++ b/umpc.htm
@@ -141,6 +141,10 @@ King Jim Pomera DM250</h3>
 簡要規格</a><br>
 
 &dash;
+<a href="umpc/dm250_teardown.htm">
+拆機</a><br>
+
+&dash;
 <a href="umpc/dm250_install_kernel.htm">
 如何安裝Kernel</a><br>
 
