--- a/driver/wdm_stop_winxp_sign.htm
+++ b/driver/wdm_stop_winxp_sign.htm
@@ -8,7 +8,7 @@
 WinXP的數位簽章檢查並非強制性，因此，使用者可以使用如下方法關閉數位簽章的警告視窗
 </p>
 <pre>
-控制台 =&gt; 系統 =&gt; 硬體 =&gt; 驅動程式簽暑 =&gt; 略過
+控制台 =&gt; 系統 =&gt; 硬體 =&gt; 驅動程式簽署 =&gt; 略過
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
