--- a/trip/japan_kyoto.htm
+++ b/trip/japan_kyoto.htm
@@ -28,7 +28,7 @@
 樓上在整修，所以無法進入參觀，只能隔著玻璃拍照<br>
 <img src="japan_kyoto/6.jpg" class="maxSize"><br><br>
 
-四条河原町，相當熱鬧好逛的地方<br>
+四條河，相當熱鬧的地方<br>
 <img src="japan_kyoto/7.jpg" class="maxSize"><br>
 <img src="japan_kyoto/8.jpg" class="maxSize"><br>
 <img src="japan_kyoto/9.jpg" class="maxSize"><br>
@@ -74,7 +74,7 @@
 <img src="japan_kyoto/32.jpg" class="maxSize"><br>
 <img src="japan_kyoto/33.jpg" class="maxSize"><br><br>
 
-炎熱夏天就是需要吃冰淇淋補充體力<br>
+炎熱的夏天就是需要吃甜點補充體力<br>
 <img src="japan_kyoto/39.jpg" class="maxSize"><br>
 <img src="japan_kyoto/34.jpg" class="maxSize"><br>
 <img src="japan_kyoto/35.jpg" class="maxSize"><br>
