--- a/trip/japan_osaka.htm
+++ b/trip/japan_osaka.htm
@@ -26,10 +26,10 @@
 <img src="japan_osaka/10.jpg" class="maxSize"><br>
 <img src="japan_osaka/11.jpg" class="maxSize"><br><br>
 
-這店家有擺設一台GPD MicroPC在櫥窗，也是唯一一家在大阪電子街有販賣GPD和AYANEO產品的店家<br>
+店家擺設一台GPD MicroPC在櫥窗裡，也是唯一一家在大阪電子街販賣GPD和AYANEO產品的店家<br>
 <img src="japan_osaka/12.jpg" class="maxSize"><br><br>
 
-果然裡面有GPD的產品，GPD WIN Mini還是相當漂亮，可惜大了一點，不然應該是司徒的首選機器<br>
+GPD WIN Mini還是相當漂亮，可惜大了一點，不然應該是司徒的首選機器<br>
 <img src="japan_osaka/13.jpg" class="maxSize"><br><br>
 
 竟然還有AYANEO的產品<br>
@@ -46,7 +46,7 @@
 <img src="japan_osaka/18.jpg" class="maxSize"><br>
 <img src="japan_osaka/19.jpg" class="maxSize"><br><br>
 
-司徒3年前在這裡購買Odroid Go，想不到這店家還在<br>
+司徒3年前在這裡購買Odroid Go，想不到這家店還在<br>
 <img src="japan_osaka/20.jpg" class="maxSize"><br>
 <img src="japan_osaka/21.jpg" class="maxSize"><br>
 <img src="japan_osaka/22.jpg" class="maxSize"><br>
@@ -95,7 +95,7 @@
 <img src="japan_osaka/49.jpg" class="maxSize"><br>
 <img src="japan_osaka/53.jpg" class="maxSize"><br><br>
 
-這次來大阪逛街時，發現BOOK OFF店家已經相當稀少<br>
+數量正大幅減少的BOOK OFF店家<br>
 <img src="japan_osaka/50.jpg" class="maxSize"><br>
 <img src="japan_osaka/51.jpg" class="maxSize"><br>
 <img src="japan_osaka/52.jpg" class="maxSize"><br><br>
