--- a/umpc.htm
+++ b/umpc.htm
@@ -145,6 +145,10 @@ King Jim Pomera DM250</h3>
 拆機</a><br>
 
 &dash;
+<a href="umpc/dm250_uart.htm">
+焊接UART</a><br>
+
+&dash;
 <a href="umpc/dm250_install_kernel.htm">
 如何安裝Kernel</a><br>
 
