DM250 Added dmesg log.

--- a/umpc.htm
+++ b/umpc.htm
@@ -171,6 +171,13 @@ Make Initramfs</a><br>
 &dash;
 <a href="umpc/dm250_build_kernel.htm">
 Build Kernel</a><br>
+
+&oplus;
+<b>Stock</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/dm250_stock_dmesg.htm">
+    dmesg</a><br>
 <br><br><br><br>
 
 <div id="d5"></div>
