DM250 Added kallsyms log.

--- a/umpc.htm
+++ b/umpc.htm
@@ -178,6 +178,10 @@ Build Kernel</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/dm250_stock_dmesg.htm">
     dmesg</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/dm250_stock_kallsyms.htm">
+    kallsyms</a><br>
 <br><br><br><br>
 
 <div id="d5"></div>
