DM250 Added cmdline log.

--- a/umpc.htm
+++ b/umpc.htm
@@ -180,6 +180,10 @@ Build Kernel</a><br>
     dmesg</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/dm250_stock_cmdline.htm">
+    cmdline</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/dm250_stock_kallsyms.htm">
     kallsyms</a><br>
 <br><br><br><br>
