DM250 How to enter recovery boot.

--- a/umpc.htm
+++ b/umpc.htm
@@ -161,6 +161,10 @@ King Jim Pomera DM250</h3>
 如何備份NAND Flash</a><br>
 
 &dash;
+<a href="umpc/dm250_recovery.htm">
+如何進入Recovery Boot</a><br>
+
+&dash;
 <a href="umpc/dm250_rootfs.htm">
 Make Rootfs</a><br>
 
