--- a/umpc.htm
+++ b/umpc.htm
@@ -149,6 +149,10 @@ King Jim Pomera DM250</h3>
 焊接UART</a><br>
 
 &dash;
+<a href="umpc/dm250_reset.htm">
+焊接Reset按鍵</a><br>
+
+&dash;
 <a href="umpc/dm250_install_kernel.htm">
 如何安裝Kernel</a><br>
 
