--- a/umpc.htm
+++ b/umpc.htm
@@ -168,18 +168,6 @@ King Jim Pomera DM250</h3>
 <a href="umpc/dm250_recovery.htm">
 如何進入Recovery Boot</a><br>
 
-&dash;
-<a href="umpc/dm250_rootfs.htm">
-Make Rootfs</a><br>
-
-&dash;
-<a href="umpc/dm250_initramfs.htm">
-Make Initramfs</a><br>
-
-&dash;
-<a href="umpc/dm250_build_kernel.htm">
-Build Kernel</a><br>
-
 &oplus;
 <b>Stock</b><br>
 
@@ -194,6 +182,21 @@ Build Kernel</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/dm250_stock_kallsyms.htm">
     kallsyms</a><br>
+
+&oplus;
+<b>Debian</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/dm250_rootfs.htm">
+    Make Rootfs</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/dm250_initramfs.htm">
+    Make Initramfs</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/dm250_build_kernel.htm">
+    Build Kernel</a><br>
 <br><br><br><br>
 
 <div id="d5"></div>
