--- a/umpc/dm250_rootfs.htm
+++ b/umpc/dm250_rootfs.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../umpc.htm">微電腦</a> - King Jim Pomera DM250 - <b>Make Rootfs</b></h3>
+<h3><a href="../umpc.htm">微電腦</a> - King Jim Pomera DM250 - Debian - <b>Make Rootfs</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
