--- a/umpc/dm250_build_kernel.htm
+++ b/umpc/dm250_build_kernel.htm
@@ -24,10 +24,12 @@ $ git clone https://github.com/ichinomoto/dm200_debian_kernel
 $ cd dm200_debian_kernel
 $ git checkout dm250_dev
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make dm250_defconfig
+$ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make zImage -j4
+    multiple definition of `yylloc'; scripts/dtc/dtc-lexer.lex.o:(.bss+0x0)
+
 $ vim scripts/dtc/dtc-lexer.lex.c +640
     extern YYLTYPE yylloc;
 
-$ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make dm250_defconfig
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make zImage -j4
 $ ./mkkrnlimg arch/arm/boot/zImage kernel.img
 </pre>
