--- a/umpc.htm
+++ b/umpc.htm
@@ -157,10 +157,6 @@ King Jim Pomera DM250</h3>
 如何安裝Kernel</a><br>
 
 &dash;
-<a href="umpc/dm250_debian_setup.htm">
-如何安裝Debian 11</a><br>
-
-&dash;
 <a href="umpc/dm250_backup.htm">
 如何備份NAND Flash</a><br>
 
@@ -185,6 +181,10 @@ King Jim Pomera DM250</h3>
 
 &oplus;
 <b>Debian</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/dm250_debian_setup.htm">
+    安裝Debian 11</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/dm250_rootfs.htm">
