--- a/umpc/dm250_debian_setup.htm
+++ b/umpc/dm250_debian_setup.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../umpc.htm">微電腦</a> - King Jim Pomera DM250 - <b>如何安裝Debian 11</b></h3>
+<h3><a href="../umpc.htm">微電腦</a> - King Jim Pomera DM250 - Debian - <b>安裝Debian 11</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -20,7 +20,7 @@ https://qiita.com/alt-core/items/0467dca2f4b50d3e3003<br><br>
 5. 格式化SD卡成如下分區<br>
 <img src="dm250_debian_setup/1.jpg" class="maxSize"><br><br>
 
-6. https://github.com/steward-fu/website/releases/download/dm250/dm250_debian_rootfs.tar.gz<br>
+6. https://github.com/steward-fu/website/releases/download/dm250/dm250_debian11_rootfs.tar.gz<br>
 7. 解壓縮到第2個ext2分區<br>
 8. 按下<b>電源按鍵 + 左Alt + 右Shift</b><br>
 <img src="dm250_debian_setup/2.jpg" class="maxSize">
