--- a/system.htm
+++ b/system.htm
@@ -218,16 +218,16 @@ shell script "$、{}、%、#"用途</a><br>
 <b>QEMU</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="system/debian_qemu_win98.htm">
-    安裝Windows 98</a><br>
+    <a href="system/debian_qemu_qcow2.htm">
+    如何掛載QCOW2</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_qemu_snapshot.htm">
+    如何Take Snapshot</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="system/debian_qemu_hostonly.htm">
     如何設定Host-only網卡</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="system/debian_qemu_snapshot.htm">
-    如何儲存、載入Snapshot</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="system/debian_qemu_mount.htm">
