--- a/system/debian_qemu_hostonly.htm
+++ b/system/debian_qemu_hostonly.htm
@@ -24,10 +24,11 @@ $ sudo dnsmasq --interface=br0 --bind-interfaces --dhcp-range=192.168.100.50,192
 </pre><br>
 
 <p>
-QEMU設置網卡的方式可以任選其中一個
+設置網卡的方式可以任選下面其中一個
 </p>
 <pre>
 $ qemu -device e1000,netdev=network0,mac=00:00:00:00:00:00 -netdev tap,id=network0,ifname=tap0,script=no,downscript=no
+
 $ qemu -device virtio-net-pci,netdev=n0,mac=FE:9c:37:4a:2c:93 -netdev tap,id=n0,ifname=tap0,script=no,downscript=no
 </pre><br>
 
