--- a/system/debian_qemu_snapshot.htm
+++ b/system/debian_qemu_snapshot.htm
@@ -2,25 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../system.htm">系統</a> - Debian - QEMU - <b>如何儲存、載入Snapshot</b></h3>
+    <h3><a href="../system.htm">系統</a> - Debian - QEMU - <b>如何Take Snapshot</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
 https://serverfault.com/questions/889163/combine-snapshot-and-loadvm-snap-id-in-qemu-system<br><br>
 
-儲存Snapshot：
+Take Snapshot：
 </p>
 <pre>
-$ qemu-system-i386 -hda xxx.qcow2 -boot c -cpu coreduo -m 1024 -vga cirrus -net nic,model=pcnet -rtc base=localtime -accel tcg -no-hpet -serial none -parallel none -monitor stdio -snapshot
+$ qemu-system-i386 -hda xxx.qcow2 -boot c -cpu coreduo -m 1024 -vga cirrus -accel tcg -monitor stdio -snapshot
 
 (qemu) migrate "exec: gzip -c &gt; myvm.gz"
 </pre><br>
 
 <p>
-載入Snapshot：
+Restore Snapshot：
 </p>
 <pre>
-$ qemu-system-i386 -hda xxx.qcow2 -boot c -cpu coreduo -m 1024 -vga cirrus -net nic,model=pcnet -rtc base=localtime -accel tcg -no-hpet -serial none -parallel none -monitor stdio -incoming "exec: gzip -c -d myvm.gz" -snapshot
+$ qemu-system-i386 -hda xxx.qcow2 -boot c -cpu coreduo -m 1024 -vga cirrus -accel tcg -monitor stdio -snapshot -incoming "exec: gzip -c -d myvm.gz"
 </pre><br>
 
 <br><script type="text/javascript" src="../tail.js"></script>
