--- a/phone.htm
+++ b/phone.htm
@@ -1651,42 +1651,34 @@ Blackberry Curve9320</h3>
 Motorola XT894</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="phone/xt894/review.htm">
-介紹</a><br>
+&dash;
+<a href="phone/xt894_spec.htm">
+簡要規格</a><br>
 
 &oplus;
 <b>Alpine</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt894/install_alpine.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_alpine_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>Ubuntu</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt894/install_ubuntu.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_ubuntu_setup.htm">
     安裝系統</a><br>
 
 &oplus;
 <b>Maemo Leste</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt894/install_maemo.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_maemo_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt894/key_symbols.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_maemo_keys.htm">
     定義鍵盤組合鍵</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt894/libsdl-1.2.htm">
-    install libsdl 1.2</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt894/build_kernel-5.7.0.htm">
-    build kernel 5.7.0</a><br>
 <br><br><br><br>
 
 <div id="xt897"></div>
