XT894 How to activate OK key.

--- a/phone/xt894_maemo_keys.htm
+++ b/phone/xt894_maemo_keys.htm
@@ -5,6 +5,12 @@
 <h3><a href="../phone.htm">手機</a> - Motorola XT894 - Maemo Leste - <b>定義鍵盤組合鍵</b></h3>
 <hr size="1"><br>
 <p>
+參考資訊：<br>
+https://leste.maemo.org/Motorola_Droid_4<br><br>
+
+預設按鍵<br>
+<img src="xt894_maemo_keys/1.jpg"><br><br>
+
 /usr/share/X11/xkb/symbols/us
 </p>
 <pre>
