--- a/phone.htm
+++ b/phone.htm
@@ -1679,6 +1679,10 @@ Motorola XT894</h3>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/xt894_maemo_keys.htm">
     定義鍵盤組合鍵</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_maemo_ok.htm">
+    如何啟動OK按鍵</a><br>
 <br><br><br><br>
 
 <div id="xt897"></div>
