--- a/phone/xt897_spec.htm
+++ b/phone/xt897_spec.htm
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - Motorola XT894 - <b>簡要規格</b></h3>
+<h3><a href="../phone.htm">手機</a> - Motorola XT897 - <b>簡要規格</b></h3>
 <hr size="1"><br>
 <table>
-    <tr><th>CHIP</th><td>TI OMAP 4430</td></tr>
-    <tr><th>CPU</th><td>ARM Cortex-A9 1.2GHz (x2)</td></tr>
-    <tr><th>GPU</th><td>PowerVR SGX540</td></tr>
-    <tr><th>MEMORY</th><td>RAM 1GB<br>Flash 16GB</td></tr>
+    <tr><th>CHIP</th><td>Qualcomm Snapdragon S4 MSM8960</td></tr>
+    <tr><th>CPU</th><td>ARM Cortex-A15 1.5GHz (x2)</td></tr>
+    <tr><th>GPU</th><td>Qualcomm Adreno 230</td></tr>
+    <tr><th>MEMORY</th><td>RAM 1GB<br>Flash 8GB</td></tr>
     <tr><th>CAMERA</th><td>8MP</td></tr>
     <tr><th>DISPLAY</th><td>4.3" 960x540 (Capacitive)</td></tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
@@ -16,8 +16,8 @@
     <tr><th>PORT</th><td>USB Micro B<br>3.5mm Jack</td></tr>
     <tr><th>WIRELESS</th><td>Wi-Fi<br>Bluetooth v4.0</td></tr>
     <tr><th>BATTERY</th><td>1785mA</td></tr>
-    <tr><th>DIMENSION</th><td>127mm x 63.7mm x 12.7mm</td></tr>
-    <tr><th>WEIGHT</th><td>178g</td></tr>
+    <tr><th>DIMENSION</th><td>126.5mm x 66mm x 13.7mm</td></tr>
+    <tr><th>WEIGHT</th><td>170g</td></tr>
 </table>
 
 <br><script type="text/javascript" src="../tail.js"></script>
