--- a/phone.htm
+++ b/phone.htm
@@ -465,70 +465,64 @@ Motorola XT897</h3>
     <a href="phone/xt897_cm10_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/cm10_keyboard.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_keyboard.htm">
     自定義鍵盤按鍵</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/cm10_update_kernel.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_update_kernel.htm">
     如何更新Kernel</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/cm10_build_kernel.htm">
-    build kernel 3.0.101</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_vim_arrow.htm">
-    解決VIM方向鍵出現ABCD問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/cm10_fix_cell.htm">
-    解決"Cell Standby 100%"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/cm10_resize.htm">
-    解決adb shell只能使用一半畫面的問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/cm10_backup_sdcard0.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_backup_sdcard0.htm">
     如何透過TWRP備份Internal Storage</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    XServer XSDL<br>
-    
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="phone/cosmo/xsdl/fix_sdl2.htm">
-            解決SDL2無法顯示的問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_fix_vim_arrow.htm">
+    解決Vim方向鍵出現ABCD問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_fix_cell.htm">
+    解決Cell Standby 100%問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_resize.htm">
+    解決ADB Shell只能使用一半畫面的問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_build_kernel.htm">
+    Build Kernel 3.0.101</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_cm10_fix_sdl2.htm">
+    解決XSDL SDL2無法正確顯示的問題</a><br>
 
 &oplus;
 <b>LineageOS 14</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/lineageos14_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos14_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/lineageos14_keyboard.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos14_keyboard.htm">
     自定義鍵盤按鍵</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Linux Deploy<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos14_debian_setup.htm">
+    如何透過Linux Deploy安裝Debian 8</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/xt897/debian_setup.htm">
-        安裝Debian 8(XSDL)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos14_debian_fix_pa.htm">
+    解決在XSDL無法連接PulseDroid的問題</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/xt897/debian_fix_pa.htm">
-        解決在XSDL無法連接PulseDroid的問題(chroot)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos14_debian_fix_spp.htm">
+    解決在XSDL無法連接SimpleProtoclPlayer的問題</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/xt897/debian_fix_spp.htm">
-        解決在XSDL無法連接SimpleProtoclPlayer的問題(chroot)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="phone/xt897/debian_fix_pulse.htm">
-        解決"ALSA lib pulse.c:243 .. PulseAudio: Unable to connect: Timeout"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos14_debian_fix_pulse.htm">
+    解決ALSA lib pulse.c:243 .. PulseAudio: Unable to connect: Timeout問題</a><br>
 
 &oplus;
 <b>LineageOS 13</b><br>
