--- a/phone.htm
+++ b/phone.htm
@@ -527,23 +527,19 @@ Motorola XT897</h3>
 &oplus;
 <b>LineageOS 13</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/lineageos_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos13_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/lineageos_fix_cell.htm">
-    解決"Cell Standby 100%"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_lineageos13_fix_cell.htm">
+    解決Cell Standby 100%問題</a><br>
 
 &oplus;
-<b>Sailfish</b><br>
+<b>Sailfish OS</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/dmesg.htm">
-    dmesg</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/install_sailfish.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt897_sailfish_setup.htm">
     安裝系統</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
@@ -589,6 +585,42 @@ Motorola XT897</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/xt897/pl2303.htm">
     支援Prolific 2303</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/opengl_argb8888.htm">
+    為何OpenGL Framerate只有30fps</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/fix_ldconfig.htm">
+    解決"LD_LIBRARY_PATH /usr/local/lib"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/fix_tracker.htm">
+    解決"high cpu usage: tracker-miner-fs"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/fix_perl.htm">
+    解決"modules are missing: ExtUtils::MakeMaker"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/fix_opengl.htm">
+    解決"KHR/khrplatform.h: No such file or directory"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/fix_grep.htm">
+    解決"configure: error: no acceptable grep could be found"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/fix_install.htm">
+    解決"Segmentation fault /usr/bin/install -c -m 644 libgcc_s.so.1"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/fix_curl.htm">
+    解決"curl failed to verify the legitimacy of the server and therefore could not"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/xt897/dmesg.htm">
+    dmesg</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/xt897/repack_aboot.htm">
@@ -645,38 +677,6 @@ Motorola XT897</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/xt897/build_kernel-3.0.101.htm">
     build kernel 3.0.101</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/opengl_argb8888.htm">
-    為何OpenGL Framerate只有30fps</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_ldconfig.htm">
-    解決"LD_LIBRARY_PATH /usr/local/lib"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_tracker.htm">
-    解決"high cpu usage: tracker-miner-fs"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_perl.htm">
-    解決"modules are missing: ExtUtils::MakeMaker"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_opengl.htm">
-    解決"KHR/khrplatform.h: No such file or directory"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_grep.htm">
-    解決"configure: error: no acceptable grep could be found"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_install.htm">
-    解決"Segmentation fault /usr/bin/install -c -m 644 libgcc_s.so.1"問題</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/xt897/fix_curl.htm">
-    解決"curl failed to verify the legitimacy of the server and therefore could not"問題</a><br>
 
 &oplus;
 <b>chroot</b><br>
