--- a/index.htm
+++ b/index.htm
@@ -174,6 +174,7 @@
     <a href="#q19">             <img src="img/photos/q19.jpg"               class="t0" title="Q19"/></a>
     <a href="#x7s">             <img src="img/photos/x7s.jpg"               class="t0" title="X7S"/></a>
     <a href="#x5">              <img src="img/photos/x5.jpg"                class="t0" title="GAME BOX X5"/></a>
+    <a href="#v10">             <img src="img/photos/v10.jpg"               class="t0" title="Powkiddy V10"/></a>
 </p>
 </div>
 
@@ -7477,6 +7478,16 @@ GAME BOX X5</h3>
 &dash;
 <a href="handheld/x5_screen.htm">
 可視角</a><br>
+<br><br><br><br>
+
+<div id="v10"></div>
+<h3><img src="img/photos/v10.jpg" class="floatLeft"/>
+Powkiddy V10</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/v10_spec.htm">
+簡要規格</a><br>
 <br><br><br><br>
 </p>
 
