V10 Added teardown and screen images.

--- a/handheld/v10_spec.htm
+++ b/handheld/v10_spec.htm
@@ -7,7 +7,7 @@
 <table>
     <tr><th>CHIP</th><td>Rockchip RK3326</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A35 1.5GHz (x4)</td></tr>
-    <tr><th>MEMORY</th><td>RAM 1GB</td></tr>
+    <tr><th>MEMORY</th><td>RAM 1GB<br>Flash 16MB</td></tr>
     <tr><th>DISPLAY</th><td>3.5" 480x320</td></tr>
     <tr><th>INPUT</th><td>GamePad</tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
