--- a/index.htm
+++ b/index.htm
@@ -7488,6 +7488,14 @@ Powkiddy V10</h3>
 &dash;
 <a href="handheld/v10_spec.htm">
 簡要規格</a><br>
+
+&dash;
+<a href="handheld/v10_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/v10_screen.htm">
+可視角</a><br>
 <br><br><br><br>
 </p>
 
