GB-60A Added teardown and screen images.

--- a/index.htm
+++ b/index.htm
@@ -175,6 +175,7 @@
     <a href="#x7s">             <img src="img/photos/x7s.jpg"               class="t0" title="X7S"/></a>
     <a href="#x5">              <img src="img/photos/x5.jpg"                class="t0" title="GAME BOX X5"/></a>
     <a href="#v10">             <img src="img/photos/v10.jpg"               class="t0" title="Powkiddy V10"/></a>
+    <a href="#gb60">            <img src="img/photos/gb60.jpg"              class="t0" title="GB-60A"/></a>
 </p>
 </div>
 
@@ -7495,6 +7496,20 @@ Powkiddy V10</h3>
 
 &dash;
 <a href="handheld/v10_screen.htm">
+可視角</a><br>
+<br><br><br><br>
+
+<div id="gb60"></div>
+<h3><img src="img/photos/gb60.jpg" class="floatLeft"/>
+GB-60A</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/gb60_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/gb60_screen.htm">
 可視角</a><br>
 <br><br><br><br>
 </p>
