--- a/system.htm
+++ b/system.htm
@@ -270,9 +270,9 @@ shell script "$、{}、%、#"用途</a><br>
 &oplus;
 <b>Kernel</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/gdb_core_dump.htm">
-    core dump</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_core_dump.htm">
+    如何產生Core Dump</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/debian/double_dash.htm">
