--- a/index.htm
+++ b/index.htm
@@ -7004,9 +7004,13 @@ build general-tools</a><br>
 <h3><img src="img/photos/ndsi.jpg" class="floatLeft"/>
 Nintendo DSi</h3>
 <hr size="1"><br><br><br><br><br>
-&lowast;
-<a href="handheld/ndsi/review.htm">
+&dash;
+<a href="handheld/ndsi_spec.htm">
 介紹</a><br>
+
+&dash;
+<a href="handheld/ndsi_battery.htm">
+改造電池</a><br>
 <br><br><br><br>
 
 <div id="3ds"></div>
