Arduino Nano 33 BLE How to prevent ip5306 from shutdowning.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2476,6 +2476,10 @@ build teensy_loader_cli</a><br>
 電路圖</a><br>
 
 &dash;
+<a href="mcu/nano33ble_ip5306.htm">
+如何防止IP5306自動斷電</a><br>
+
+&dash;
 <a href="mcu/nano33ble_openocd.htm">
 如何透過ST-LINK V2燒錄程式(OpenOCD)</a><br>
 
