TRIMUI SMART Refined.

--- a/index.htm
+++ b/index.htm
@@ -1128,36 +1128,36 @@ Screen Tearing Test</a><br>
 TRIMUI SMART</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/trimui-smart/review.htm">
+&dash;
+<a href="handheld/trimui_smart_spec.htm">
 介紹</a><br>
 
-&lowast;
-<a href="handheld/trimui-smart/teardown.htm">
+&dash;
+<a href="handheld/trimui_smart_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="handheld/trimui-smart/pinout.htm">
-接腳</a><br>
+&dash;
+<a href="handheld/trimui_smart_pinout.htm">
+腳位</a><br>
 
-&lowast;
-<a href="handheld/trimui-smart/screen.htm">
+&dash;
+<a href="handheld/trimui_smart_screen.htm">
 可視角</a><br>
 
-&lowast;
-<a href="handheld/trimui-smart/battery.htm">
+&dash;
+<a href="handheld/trimui_smart_battery.htm">
 更換電池</a><br>
 
-&lowast;
-<a href="handheld/trimui-smart/uart.htm">
+&dash;
+<a href="handheld/trimui_smart_uart.htm">
 UART腳位</a><br>
 
-&lowast;
-<a href="handheld/trimui-smart/ledoff.htm">
+&dash;
+<a href="handheld/trimui_smart_ledoff.htm">
 如何關閉LED</a><br>
 
-&lowast;
-<a href="handheld/trimui-smart/volume.htm">
+&dash;
+<a href="handheld/trimui_smart_volume.htm">
 如何設定音量</a><br>
 
 &lowast;
