--- a/handheld/trimui_smart_uart.htm
+++ b/handheld/trimui_smart_uart.htm
@@ -1,86 +1,43 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>TRIMUI SMART</h3>
-<p><b>UART腳位</b></p>
-<hr size="1">
+<h3><a href="../index.htm">掌機</a> - TRIMUI SMART - <b>UART腳位</b></h3>
+<hr size="1"><br>
 <p>
 司徒找到一個還不錯的位置<br>
-<img src="uart/1.jpg" class="maxSize"><br><br>
+<img src="trimui_smart_uart/1.jpg" class="maxSize"><br><br>
 
 裝入後<br>
-<img src="uart/2.jpg" class="maxSize"><br><br>
+<img src="trimui_smart_uart/2.jpg" class="maxSize"><br><br>
 
 需要挖掉一些東西<br>
-<img src="uart/3.jpg" class="maxSize"><br><br>
+<img src="trimui_smart_uart/3.jpg" class="maxSize"><br><br>
 
-還算可以～<br>
-<img src="uart/4.jpg" class="maxSize"><br><br>
+還算可以<br>
+<img src="trimui_smart_uart/4.jpg" class="maxSize"><br><br>
 
-縫隙等之後在用3D印表機列印補起來～<br>
-<img src="uart/5.jpg" class="maxSize"><br><br>
+縫隙等之後在用3D印表機列印補起來<br>
+<img src="trimui_smart_uart/5.jpg" class="maxSize"><br><br>
 
 連接UART<br>
-<img src="uart/6.jpg" class="maxSize"><br><br>
+<img src="trimui_smart_uart/6.jpg" class="maxSize"><br><br>
 
-為了方便使用USB Type-C連接，司徒最後改成使用PL-2303SA<br>
-<img src="uart/10.jpg" class="maxSize"><br>
+為了方便使用USB C連接，司徒最後改成使用PL-2303SA<br>
+<img src="trimui_smart_uart/10.jpg" class="maxSize"><br>
 Miyoo-Mini TXD連接到RX<br>
 Miyoo-Mini RXD連接到TX<br><br>
 
 跳線後<br>
-<img src="uart/7.jpg" class="maxSize"><br><br>
+<img src="trimui_smart_uart/7.jpg" class="maxSize"><br><br>
 
 裝上外殼<br>
-<img src="uart/8.jpg" class="maxSize"><br><br>
+<img src="trimui_smart_uart/8.jpg" class="maxSize"><br><br>
 
 完成<br>
-<img src="uart/9.jpg" class="maxSize"><br><br>
+<img src="trimui_smart_uart/9.jpg" class="maxSize"><br><br>
 
-115200bps
+Baudrate 115200bps
 </p>
 <pre>
 HELLO! BOOT0 is starting!
@@ -682,14 +639,6 @@ wififlag 1, hostapflag 0
 [   10.571413] rtk_btcoex: BTCOEX hci_rev 0xaaa8
 [   10.576253] rtk_btcoex: BTCOEX lmp_subver 0x2df5
 [   18.940035] Bluetooth: hu c4cd2940 retransmitting 1 pkts
-</pre><br>
+</pre>
 
-<p>
-<br><a href="../../handheld.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
